# SJTU_AI3702_Project

./: README.md
catkin_ws/models/velodyne/: model.config  model.sdf
catkin_ws/src/: cylinder_robot.tar.xz
catkin_ws/src/Final/: gazebo7.world  navigation.tar.xz
catkin_ws/src/Final/model/aws_robomaker_residential_Ball_01/: model.sdf
catkin_ws/src/Final/model/aws_robomaker_residential_CoffeeTable_01/: model.sdf
catkin_ws/src/Final/model/aws_robomaker_residential_FoldingDoor_01/: model.sdf
catkin_ws/src/Final/model/aws_robomaker_residential_KitchenTable_01/: model.sdf
catkin_ws/src/Final/model/hinged_door/: model.sdf  (+1 more)
catkin_ws/src/astar/: CMakeLists.txt  package.xml
catkin_ws/src/astar/include/: Astar.h
catkin_ws/src/astar/launch/: astar_only.launch
catkin_ws/src/astar/rviz/: astar.rviz
catkin_ws/src/astar/src/: main.cpp  main_try.cpp  main_try2.cpp
catkin_ws/src/cylinder_robot/: CMakeLists.txt  package.xml
catkin_ws/src/cylinder_robot/config/: rvizConfig.rviz
catkin_ws/src/cylinder_robot/launch/: runCylinder.launch  teleopCylinder.launch
catkin_ws/src/cylinder_robot/script/: controller.py  driver.py  perception.py
catkin_ws/src/cylinder_robot/worlds/: cylinder.world
catkin_ws/src/sc_gazebo/launch/: costmap_common_params.yaml  demo_gazebo_empty.launch  demo_gazebo_sc0.launch  global_costmap_params.yaml  local_costmap_params.yaml  move_base_bringup.launch  sc_gazebo.launch
catkin_ws/src/sc_gazebo/maps/: small_house.yaml
catkin_ws/src/sc_gazebo/rviz/: sc_model.rviz
catkin_ws/src/sc_gazebo/urdf/: reference.urdf  sc_laser_camera.gazebo
(+12 files in other folders)
